--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -36,7 +36,7 @@
                     </li>
                     <li class="nav-item px-2">
                         <NavLink class="nav-link" href="viewdiver">
-                            <span class="oi oi-book" aria-hidden="true"></span> Diver Info
+                            <span class="oi oi-person" aria-hidden="true"></span> Diver Info
                         </NavLink>
                     </li>
                     <li class="nav-item px-2">
